# employee_manage

./: CMakeLists.txt  README.md  compile.sh  note.txt  readme.md  version  作业.txt
include/: common.h  employee_def.h  employee_mgr.h  employee_utils.h  hash_data.h  parse_args.h
include/common/: common.h  log.h
include/def/: command_def.h  employee_info.h
lib/: CMakeLists.txt  employee_mgr.c  employee_utils.c  hash_data.c
lib/employee_manager/: employee_mgr.c  employee_mgr.h  employee_utils.c  employee_utils.h
lib/hash_table/: hash_table.c  hash_table.h
scripts/: show_infos.txt
src/: CMakeLists.txt  employee_main.c  employee_mgr.c  employee_utils.c  hash_data.c  parse_args.c
src/command_parse/: parse_args.c  parse_args.h
src/execution/: employee_main.c
test/: CMakeLists.txt  test_main.c
test/mem_check/: CMakeLists.txt  mem_check.c
test/unit_test/: CMakeLists.txt  test_emmgr.cpp  test_hash.cpp  test_parse.cpp  unit_test.cpp
